data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2214.wast
;; 4. **Maximum Limit of Labels in `br_table`**:    - Test with a `br_table` having the maximum allowable number of labels and a default fallback. Ensure that the engine correctly handles the label vector and defaults accurately, without creating infinite loops due to misindexed jumps.

(assert_invalid
  (module
    (func $max-label-table
      (block
        (loop
          (i32.const 0)
          (br_table 
            0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 (i32.const 0)
            0
          )
        )
      )
    )
  )
  "unknown label"
)